--- a/index.html
+++ b/index.html
@@ -4,19 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Tablets&multimedia</title>
 </head>
 <body>
     <header>
-<audio src="audio/splin-hram.mp3" controls loop >Splin -Hram-</audio>
-<hr>
-<video src="video/KALUSH feat Skofka - Додому.mp4" controls height="200px" autoplay></video>
-<hr>
-<audio controls>
-    <source src="audio/splin-hram.mp3">
-</audio>
-<hr>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9AverhY6qAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </header>    
+        <audio src="audio/splin-hram.mp3" controls loop >Splin -Hram-</audio>
+        <hr>
+        <video src="video/KALUSH feat Skofka - Додому.mp4" controls height="200px" autoplay></video>
+        <hr>
+        <audio controls>
+            <source src="audio/splin-hram.mp3">
+        </audio>
+        <hr>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/9AverhY6qAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </header>  
+    <main>
+        <hr>
+        <table>
+                <tr>
+                    <th>Company</th>
+                    <th>Smartphone</th>
+                    <th>Computer</th>
+                    <th>Tablet</th>
+                    <th>LapTop</th>
+                </tr>
+                <tr>
+                    <td>Apple</td>
+                    <td>yes</td>
+                    <td>yes</td>
+                    <td>yes</td>
+                    <td>yes</td>
+                </tr>
+                <tr>
+                    <td>HP</td>
+                    <td>no</td>
+                    <td>yes</td>
+                    <td>no</td>
+                    <td>yes</td>
+                </tr>
+                <tr>
+                    <td>Dell</td>
+                    <td>no</td>
+                    <td>yes</td>
+                    <td>no</td>
+                    <td>yes</td>
+                </tr>
+                <tr>
+                    <td>Microsoft</td>
+                    <td>no</td>
+                    <td>yes</td>
+                    <td>no</td>
+                    <td>no</td>
+                </tr>
+        </table>
+    </main>  
 </body>
 </html>
