--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <h1 style="text-align:center; font-family: sans-serif;">Audio&Video&Table</h1>
         <audio src="audio/splin-hram.mp3" controls loop >Splin -Hram-</audio>
         <hr>
         <video src="video/KALUSH feat Skofka - Додому.mp4" controls height="200px" autoplay></video>
@@ -58,6 +59,22 @@
                     <td>no</td>
                 </tr>
         </table>
+        <form>
+            <h2>Contact us</h2>
+            <label for="name">Name</label>
+            <input type="text" id="name"><br>
+
+            <label for="email">Email</label><br>
+            <input type="text" id="email">
+
+            <label for="course"Course></label>
+            <select name="course">
+                <option>Adult</option>
+                <option>Teen</option>
+                <option>Child</option>
+            </select><br>
+        </form>
     </main>  
+    <script src="script.js"></script>
 </body>
 </html>
