--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 style="text-align:center; font-family: sans-serif;">Audio&Video&Table</h1>
         <audio src="audio/splin-hram.mp3" controls loop >Splin -Hram-</audio>
         <hr>
-        <video src="video/KALUSH feat Skofka - Додому.mp4" controls height="200px" autoplay></video>
+        <video src="video/KALUSH feat Skofka - Додому.mp4" controls height=200px autoplay></video>
         <hr>
         <audio controls>
             <source src="audio/splin-hram.mp3">
